feat: add complete flow to list documents
